--- a/settings.ini
+++ b/settings.ini
@@ -7,8 +7,8 @@ lib_name = stonehaven_tools
 # company_name = nike
 
 user = LukeBetham
-# description = A description of your project
-# keywords = some keywords
+description = A set of tools developed by stonehaven
+keywords = AI, stonehaven
 author = LukeBetham
 author_email = {author_email}
 # copyright = Put your copyright information here
