--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = stonehaven_tools
+lib_name = stonehaventools
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
 user = LukeBetham
 description = A set of tools developed by stonehaven
-keywords = AI, stonehaven
-author = LukeBetham
-author_email = {author_email}
-# copyright = Put your copyright information here
+keywords = AI stonehaven
+author = Luke Betham
+author_email = lbetham@stonehaven.uk.com
+copyright = Put your copyright information here
 branch = Master
 version = 0.0.1
 min_python = 3.6
